--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -157,6 +157,12 @@
     <Compile Include="GUI\AddEditProduct.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\AddFiles.Designer.vb">
+      <DependentUpon>AddFiles.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\AddFiles.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\ChooseClient.Designer.vb">
       <DependentUpon>ChooseClient.vb</DependentUpon>
     </Compile>
@@ -257,6 +263,9 @@
     <EmbeddedResource Include="GUI\AddEditProduct.resx">
       <DependentUpon>AddEditProduct.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\AddFiles.resx">
+      <DependentUpon>AddFiles.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChooseClient.resx">
       <DependentUpon>ChooseClient.vb</DependentUpon>
     </EmbeddedResource>
@@ -319,6 +328,10 @@
     <Content Include="ALMohassinDB.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\iconfinder_Aqua Stripped Folder Documents_50968.png" />
+    <None Include="Resources\téléchargement %281%29.png" />
+    <None Include="Resources\iconfinder_Plus__Orange_34237 %281%291.png" />
+    <None Include="Resources\iconfinder_Plus__Orange_34237 %281%29.png" />
     <None Include="Resources\iconfinder_application-vnd.ms-excel_24744 %281%29.png" />
     <None Include="Resources\iconfinder_Calendar_27835 %282%29.png" />
     <None Include="Resources\JOINDRE 20.png" />
