--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -87,6 +87,7 @@
     <Compile Include="Classes\NumericStrings.vb" />
     <Compile Include="Classes\RegistryModule.vb" />
     <Compile Include="Classes\SubClass.vb" />
+    <Compile Include="Classes\Trial.vb" />
     <Compile Include="Controles\AddPayementRow.Designer.vb">
       <DependentUpon>AddPayementRow.vb</DependentUpon>
     </Compile>
@@ -183,11 +184,23 @@
     <Compile Include="GUI\ChooseClient.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\ClientDetails.Designer.vb">
+      <DependentUpon>ClientDetails.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ClientDetails.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\Form1.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Form1.Designer.vb">
       <DependentUpon>Form1.vb</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ImpressionParams.Designer.vb">
+      <DependentUpon>ImpressionParams.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ImpressionParams.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\ModePayement.Designer.vb">
@@ -200,6 +213,12 @@
       <DependentUpon>NouveauFacture.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\NouveauFacture.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ReferenceFacture.Designer.vb">
+      <DependentUpon>ReferenceFacture.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ReferenceFacture.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\SearchArchive.Designer.vb">
@@ -289,14 +308,23 @@
     <EmbeddedResource Include="GUI\ChooseClient.resx">
       <DependentUpon>ChooseClient.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ClientDetails.resx">
+      <DependentUpon>ClientDetails.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ImpressionParams.resx">
+      <DependentUpon>ImpressionParams.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ModePayement.resx">
       <DependentUpon>ModePayement.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\NouveauFacture.resx">
       <DependentUpon>NouveauFacture.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ReferenceFacture.resx">
+      <DependentUpon>ReferenceFacture.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\SearchArchive.resx">
       <DependentUpon>SearchArchive.vb</DependentUpon>
