--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -85,6 +85,7 @@
     <Compile Include="Classes\DrawClass.vb" />
     <Compile Include="Classes\FactureClass.vb" />
     <Compile Include="Classes\NumericStrings.vb" />
+    <Compile Include="Classes\ParcClass.vb" />
     <Compile Include="Classes\RegistryModule.vb" />
     <Compile Include="Classes\SubClass.vb" />
     <Compile Include="Classes\Trial.vb" />
@@ -142,6 +143,12 @@
     <Compile Include="Controles\ListRow.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Controles\ParcList.Designer.vb">
+      <DependentUpon>ParcList.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Controles\ParcList.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Controles\ProductList.Designer.vb">
       <DependentUpon>ProductList.vb</DependentUpon>
     </Compile>
@@ -166,16 +173,34 @@
     <Compile Include="GUI\AddEditClient.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\AddEditDriver.Designer.vb">
+      <DependentUpon>AddEditDriver.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\AddEditDriver.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\AddEditProduct.Designer.vb">
       <DependentUpon>AddEditProduct.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\AddEditProduct.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\AddEditVehicule.Designer.vb">
+      <DependentUpon>AddEditVehicule.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\AddEditVehicule.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\AddFiles.Designer.vb">
       <DependentUpon>AddFiles.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\AddFiles.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ChooseBL.Designer.vb">
+      <DependentUpon>ChooseBL.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ChooseBL.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\ChooseClient.Designer.vb">
@@ -287,6 +312,9 @@
     <EmbeddedResource Include="Controles\ListRow.resx">
       <DependentUpon>ListRow.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controles\ParcList.resx">
+      <DependentUpon>ParcList.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controles\ProductList.resx">
       <DependentUpon>ProductList.vb</DependentUpon>
     </EmbeddedResource>
@@ -299,11 +327,20 @@
     <EmbeddedResource Include="GUI\AddEditClient.resx">
       <DependentUpon>AddEditClient.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\AddEditDriver.resx">
+      <DependentUpon>AddEditDriver.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\AddEditProduct.resx">
       <DependentUpon>AddEditProduct.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\AddEditVehicule.resx">
+      <DependentUpon>AddEditVehicule.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\AddFiles.resx">
       <DependentUpon>AddFiles.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ChooseBL.resx">
+      <DependentUpon>ChooseBL.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChooseClient.resx">
       <DependentUpon>ChooseClient.vb</DependentUpon>
@@ -376,6 +413,7 @@
     <Content Include="ALMohassinDB.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\fav 16.png" />
     <None Include="Resources\iconfinder_Printer_43348.png" />
     <None Include="Resources\iconfinder_Gnome-Emblem-System-48_55301.png" />
     <None Include="Resources\AVOIR 22.png" />
