--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -252,6 +252,12 @@
     <Compile Include="GUI\AddFiles.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\AddReference.Designer.vb">
+      <DependentUpon>AddReference.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\AddReference.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\ChooseBL.Designer.vb">
       <DependentUpon>ChooseBL.vb</DependentUpon>
     </Compile>
@@ -262,6 +268,12 @@
       <DependentUpon>ChooseClient.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\ChooseClient.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ChooseDepot.Designer.vb">
+      <DependentUpon>ChooseDepot.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ChooseDepot.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\ClientDetails.Designer.vb">
@@ -460,11 +472,17 @@
     <EmbeddedResource Include="GUI\AddFiles.resx">
       <DependentUpon>AddFiles.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\AddReference.resx">
+      <DependentUpon>AddReference.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChooseBL.resx">
       <DependentUpon>ChooseBL.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChooseClient.resx">
       <DependentUpon>ChooseClient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ChooseDepot.resx">
+      <DependentUpon>ChooseDepot.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ClientDetails.resx">
       <DependentUpon>ClientDetails.vb</DependentUpon>
@@ -556,6 +574,9 @@
     <Content Include="ALMohassinDB.mdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\BGpRD.png" />
+    <None Include="Resources\BG STK.png" />
+    <None Include="Resources\stock-icon-png-14.png" />
     <None Include="Resources\BARCODE 22.png" />
     <None Include="Resources\TAGIN-03.png" />
     <None Include="Resources\TAGIN-04.png" />
