--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -362,6 +362,12 @@
     <Compile Include="GUI\TransformerDevis.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\TransformeStock.Designer.vb">
+      <DependentUpon>TransformeStock.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\TransformeStock.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\TrialVersion.Designer.vb">
       <DependentUpon>TrialVersion.vb</DependentUpon>
     </Compile>
@@ -532,6 +538,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\TransformerDevis.resx">
       <DependentUpon>TransformerDevis.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\TransformeStock.resx">
+      <DependentUpon>TransformeStock.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\TrialVersion.resx">
       <DependentUpon>TrialVersion.vb</DependentUpon>
