finish print style + start fix transport bug

--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -266,6 +266,7 @@
     <Compile Include="GraphicModel\gColumn.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="GraphicModel\gDrawClass.vb" />
     <Compile Include="GraphicModel\gForm.Designer.vb">
       <DependentUpon>gForm.vb</DependentUpon>
     </Compile>
